--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -227,6 +227,7 @@ background: linear-gradient(90deg, rgba(195,169,255,1) 44%, rgba(255,255,255,1) 
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
+  cursor: pointer;
   /* background-color: black; */
 }
 
