--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -1,67 +1,47 @@
-.cart_container {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-  
-  h2 {
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
-  
-  .cart_item {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 10px;
-    padding: 10px;
-    background-color: #f5f5f5;
-    border-radius: 5px;
-  }
-  
-  .item_details {
-    flex: 1;
-  }
-  
-  .item_details p {
-    margin: 0;
-  }
-  
-  .item_quantity {
-    display: flex;
-    align-items: center;
-  }
-  
-  .item_quantity button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 30px;
-    height: 30px;
-    margin: 0 5px;
-    font-size: 18px;
-    color: #ffffff;
-    background-color: #007bff;
-    border: none;
-    border-radius: 50%;
-    cursor: pointer;
-  }
-  
-  .item_quantity p {
-    margin: 0 10px;
-  }
-  
-  button {
-    padding: 8px 16px;
-    font-size: 14px;
-    color: #ffffff;
-    background-color: #007bff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
+.cart-page-container {
+  padding: 20px;
+}
+
+.cart-item-card {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.cart-item-image > img{
+  width: 100px;
+  height: 100px;
+  margin-right: 20px;
+}
+
+.cart-item-details {
+  flex-grow: 1;
+}
+
+.cart-item-quantity {
+  display: flex;
+  align-items: center;
+}
+
+.cart-item-quantity button {
+  padding: 5px 10px;
+  margin-right: 5px;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #4caf50;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  margin: 10px;
+}
+
+button:hover {
+  background-color: #45a049;
+}
+
+p {
+  margin: 0;
+}
