--- a/src/pages/SingleProduct/SingleProduct.css
+++ b/src/pages/SingleProduct/SingleProduct.css
@@ -2,6 +2,12 @@
 .product_quantity_section_productbanner1{
   display: flex;
   flex-direction: row;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: rgba(0, 0, 0, 0.75);
 }
 .quantity_text{
   width: 2em;
