--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -1,47 +1,54 @@
 .cart-page-container {
-  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.cart-item-card {
-  display: flex;
-  align-items: center;
+.cart-container {
+  background-color: #fff;
+  width: 80%;
+  padding: 20px;
+  margin-top: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.cart-title {
+  font-size: 20px;
+  font-weight: bold;
   margin-bottom: 20px;
 }
 
-.cart-item-image > img{
-  width: 100px;
-  height: 100px;
-  margin-right: 20px;
+.cart-items-container {
+  margin-top: 20px;
 }
 
-.cart-item-details {
-  flex-grow: 1;
-}
-
-.cart-item-quantity {
+.proceed-button {
   display: flex;
-  align-items: center;
+  justify-content: flex-end;
+  margin: 2em 0 10em 0;
+  width: 80%;
 }
 
-.cart-item-quantity button {
-  padding: 5px 10px;
-  margin-right: 5px;
-}
-
-button {
-  padding: 10px 20px;
-  background-color: #4caf50;
-  color: #fff;
+.proceed-button button {
+  font-size: 16px;
+  font-weight: 600;
+  margin: 10px;
+  padding: .5em 1em;
+  background: var(--orange-color);
+  border-radius: 5px;
+  font-family: "Poppins";
+  font-style: normal;
+  color: var(--white-color);
+  outline: none;
   border: none;
   cursor: pointer;
-  font-size: 16px;
-  margin: 10px;
+  transition: 0.3s all ease;
 }
 
-button:hover {
-  background-color: #45a049;
+.proceed-button button:hover {
+  background-color: var(--orange-dark);
 }
 
-p {
-  margin: 0;
+.empty-cart-message {
+  margin-top: 20px;
 }
