--- a/src/pages/Checkout/Checkout.css
+++ b/src/pages/Checkout/Checkout.css
@@ -1,50 +1,184 @@
 .checkout-page-container {
-  margin: 20px;
-}
-
-.checkout-page-container h1 {
-  font-size: 24px;
-  margin-bottom: 20px;
-}
-
-.checkout-forms {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
-.checkout-form {
+.checkout-container {
+  width: 80%;
+  margin-top: 20px;
+}
+
+.checkout-section {
+  background-color: #fff;
+  padding: 1em;
   margin-bottom: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+}
+
+.checkout-section-label {
+  margin-left: -1em;
+  height: 2em;
+  padding: 5px 10px;
+  color: #fff;
+  font-weight: bold;
+  background: #7d7f3c;
+  border-radius: 0 5px 5px 0;
+}
+
+
+.checkout-form {
+  margin: 0.5em 5em 5em 2em;
+  width: 100%;
 }
 
 .checkout-form h2 {
-  font-size: 18px;
+  font-size: 20px;
+  font-weight: bold;
   margin-bottom: 10px;
 }
 
-.checkout-form input[type="text"],
-.checkout-form input[type="email"],
+.checkout-form input,
 .checkout-form select {
   width: 100%;
   padding: 8px;
-  margin-bottom: 10px;
-}
-
-.checkout-form input[type="radio"] {
-  margin-right: 5px;
+  margin: 10px 0 10px 0;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid #000;
+  outline: none;
+  padding: 5px;
+  font-family: Poppins;
+  font-weight: 400;
 }
 
 .checkout-form button {
-  padding: 10px 20px;
-  background-color: #4caf50;
-  color: #fff;
+  font-size: 16px;
+  margin: 10px;
+  padding: 5px 20px;
+  background: var(--orange-color);
+  border-radius: 5px;
+  font-family: "Poppins";
+  font-style: normal;
+  color: var(--white-color);
+  outline: none;
   border: none;
   cursor: pointer;
-  font-size: 16px;
+  transition: 0.3s all ease;
 }
 
 .checkout-form button:hover {
-  background-color: #45a049;
+  background-color: #0056b3;
 }
+
 .checkout-items {
-  margin-bottom: 20px;
+  margin: 0.5em 5em 5em 2em;}
+
+.checkout-items h2 {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.checkout-items .cart-card {
+  margin-bottom: 10px;
+}
+.address-list { 
+  margin-top: 20px;
+}
+
+.address-list h3 {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.address-list label {
+  padding: 2em;
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.address-list input[type="radio"] {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  width: 1.5em;
+  height: 1.5em;
+  border-radius: 50%;
+  border: 2px solid #E87A25;
+  margin-right: 2em;
+}
+input[type="radio"]:checked {
+  stroke-width: 4px;
+  background-color: #E87A25;
+  box-shadow: inset 0 0 0 0.2em #fff;
+}
+.address-list input[type="radio"] + span {
+  margin-left: 0;
+  flex-shrink: 0;
+}
+
+label:has(input[type="radio"]:checked) {
+  background-color: #fff9d8;
+}
+.payment{
+  display: block;
+}
+.payment-top{
+  display: flex;
+}
+.payment-list { 
+  margin-top: 20px;;
+}
+
+.payment-list h3 {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.payment-list label {
+  padding: 2em;
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.payment-list input[type="radio"] {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  width: 1.5em;
+  height: 1.5em;
+  border-radius: 50%;
+  border: 2px solid #E87A25;
+  margin-right: 2em;
+}
+.payment-list input[type="radio"] + span {
+  margin-left: 0;
+  flex-shrink: 0;
+}
+
+label:has(input[type="radio"]:checked) {
+  background-color: #fff9d8;
+}
+
+.trash-icon{
+  margin-left: auto;
+  cursor: pointer;
+}
+.payment button {
+  font-size: 16px;
+  margin: 0 2em 2em 3em;
+  padding: 5px 20px;
+  background: var(--orange-color);
+  border-radius: 5px;
+  font-family: "Poppins";
+  font-style: normal;
+  color: var(--white-color);
+  outline: none;
+  border: none;
+  cursor: pointer;
+  transition: 0.3s all ease;
 }
