--- a/src/pages/SingleProduct/SingleProduct.css
+++ b/src/pages/SingleProduct/SingleProduct.css
@@ -476,6 +476,78 @@
   line-height: 15px;
   color: rgba(0, 0, 0, 0.65);
 }
+/* Modal Styles */
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #f2f2f2;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  max-width:fit-content;
+  width: 100%
+}
+
+.modal h4 {
+  margin-bottom: 10px;
+}
+
+.modal input,
+.modal textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  outline: none;
+}
+
+.modal button {
+  background-color: #2196f3;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.modal button:hover {
+  background-color: #0d8bf2;
+}
+
+.add-review-button {
+  font-size: 16px;
+  margin: 10px;
+  padding: 5px 20px;
+  width: 10em;
+  background: var(--orange-color);
+  border-radius: 5px;
+  font-family: "Poppins";
+  font-style: normal;
+  color: var(--white-color);
+  outline: none;
+  border: none;
+  cursor: pointer;
+  transition: 0.3s all ease;
+}
+
+.add-review-button:hover {
+  background-color: var(--orange-dark);
+}
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  color: #ccc;
+  font-size: 20px;
+}
+
+.close-button:hover {
+  color: #888;
+}
 
 @media screen and (max-width: 1200px) {
   .product_main_container_productbanner1,
