--- a/src/components/MajorCategoryCard/MajorCategoryCard.css
+++ b/src/components/MajorCategoryCard/MajorCategoryCard.css
@@ -6,8 +6,8 @@
   justify-content: space-between;
   background: linear-gradient(
     80.76deg,
-    #e3e9e3 46.49%,
-    rgba(227, 233, 227, 0) 99.49%
+    rgb(221, 211, 243) 36.49%,
+    rgba(255,255,255,1) 99.49%
   );
   border-radius: 4px;
 }
