--- a/src/components/MinorCategoryCard/MinorCategoryCard.css
+++ b/src/components/MinorCategoryCard/MinorCategoryCard.css
@@ -3,9 +3,9 @@
   display: flex;
   flex-direction: column;
   background: linear-gradient(
-    58.94deg,
-    #e3e9e3 46.73%,
-    rgba(227, 233, 227, 0) 100%
+    80.76deg,
+    rgb(221, 211, 243) 36.49%,
+    rgba(255,255,255,1) 99.49%
   );
   height: 246px;
 }
