--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,22 +1,24 @@
 .login-page {
   display: flex;
-  justify-content: center;
+  align-items: flex-start;
+}
+.login-logo {
+  height: 5em;
+  width: 15em;
+  margin: 0 5em 5em 5em;
+}
+.login-form .label {
+  display: block;
+  margin-bottom: 10px;
+  font-weight: 400;
   align-items: center;
-  margin: 5em;
+  width: 25em;
 }
-
-.login-form {
-  width: 400px;
-  padding: 20px;
-  background-color: #ffffff;
-  border-radius: 15px;
-}
-
 .login-form h1 {
   color: #000;
-font-family: Poppins;
-font-size: 12.927px;
-font-weight: 700;
+  font-family: Poppins;
+  font-size: 20px;
+  font-weight: 700;
 }
 
 .login-form form {
@@ -37,6 +39,7 @@ font-weight: 700;
   padding: 5px;
   font-family: Poppins;
   font-weight: 400;
+  font-size: 20px;
 }
 
 .login-form input[type="email"]::placeholder,
@@ -45,11 +48,11 @@ font-weight: 700;
 }
 
 .login-form button[type="submit"] {
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 600;
   width: 13em;
   margin: 10px;
-  padding: .5em 1em;
+  padding: 0.5em 1em;
   background: var(--orange-color);
   border-radius: 5px;
   font-family: "Poppins";
@@ -67,6 +70,20 @@ font-weight: 700;
   margin-top: 10px;
 }
 
+.login-form {
+  width: 50%;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.login-image {
+  width: 50%;
+  margin-right: 0;
+}
+.end {
+  margin-top: 20em;
+}
 .signup-link {
   margin-top: 20px;
   text-align: center;
@@ -80,4 +97,37 @@ font-weight: 700;
 .signup-link a {
   color: #000000;
   text-decoration: none;
+}
+@media screen and (max-width: 768px) {
+  .login-page {
+    justify-content: center;
+  }
+
+  .login-logo {
+    margin: 0 auto 2em auto;
+  }
+
+  .login-form {
+    width: 80%; 
+  }
+
+  .login-form .label {
+    display: block;
+    margin-bottom: 10px;
+    font-weight: 400;
+    align-items: center;
+    width: 100%;
+  }
+  .login-image {
+    display: none;
+  }
+
+  .login-form input[type="email"],
+  .login-form input[type="password"] {
+    max-width: 300px;
+    margin: 0 auto;
+  }
+  .end {
+    display: none;
+  }
 }
