--- a/src/pages/SingleProduct/SingleProduct.css
+++ b/src/pages/SingleProduct/SingleProduct.css
@@ -130,7 +130,7 @@
 .rating_box_productbanner1 {
   width: 38px;
   height: 24px;
-  background: #58d93d;
+  background: var(--theme-color);
   border-radius: 5px;
   display: flex;
   align-items: center;
@@ -138,7 +138,7 @@
 }
 
 .rating_box_productbanner1 h6 {
-  color: var(--white-color);
+  color: var(--black-color);
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -207,7 +207,7 @@
   font-weight: 400;
   font-size: 15px;
   line-height: 26px;
-  color: #39c61c;
+  color: var(--header-bg);
 }
 
 .product_third_middle1_lower_section_productbanner1 {
@@ -291,7 +291,7 @@
 .secondary_btn_productbanner1 {
   padding: 5px 20px;
   text-decoration: none;
-  background: #7d7f3c;
+  background: var(--header-bg);
   border-radius: 5px;
   font-family: "Poppins";
   font-style: normal;
@@ -306,7 +306,7 @@
 }
 
 .secondary_btn_productbanner1:hover {
-  background-color: #969948;
+  background-color: var(--header-bg);
 }
 
 .description_main_container_productbanner1 {
